--- a/public/about.html
+++ b/public/about.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>index.html</title>
+    <title>About this project</title>
   </head>
   <body>
-    <h1>Learning Fullstack JavaScript Development: MongoDB, Node.js, React.js</h1>
+    <h1>About this project</h1>
     <p>This is the about page of the project.</p>
   </body>
 </html>
